# activecampaign-python

./: .gitignore  README.md  pyproject.toml  setup.py
activecampaign/: account.py  activities.py  addresses.py  brandings.py  campaigns.py  client.py  contacts.py  customobjects.py  dealActivities.py  deals.py  deepdataintegrations.py  emailActivities.py  events.py  exception.py  lists.py  messages.py  notes.py  tags.py  tasks.py  users.py  webhooks.py
activecampaignv3/: automations.py  client.py  contacts.py  deals.py  exception.py  lists.py  notes.py  tasks.py  users.py  webhooks.py
tests/: test_account.py  test_client.py  test_contacts.py  test_deals.py  test_lists.py  test_tasks.py  test_users.py  test_webhooks.py
